Improve admin API
